# askbuddyx

./: .env.example  .gitignore  GITHUB_SETUP.md  LICENSE-THIRD-PARTY.md  MODEL_CARD.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
askbuddyx/: __init__.py  config.py  prompting.py
askbuddyx/eval/: __init__.py  run_codegen_smoke.py  run_sanity_prompts.py
askbuddyx/publish/: __init__.py  make_bundle.py  publish.py
askbuddyx/serve/: __init__.py  serve.sh
askbuddyx/train/: __init__.py  build_training_text.py  fetch_codealpaca.py  prepare_dataset.py  run_lora.py
docs/: AWS_S3_Deployment_Quick_Guide.md  AskBuddyX_Architecture_and_Engineering.md  Demo_Results.md  HF_Download_Tracking_Analysis.md  HF_Inference_Testing_Guide.md  Iterative_Fine_Tuning_Guide.md  Quick_Start_Guide.md  Retraining_Success_Report.md  Training_Results_Analysis.md  Training_With_Perfect_Examples.md
scripts/: demo_prompts.py  duplicate_perfect_examples.py  merge_datasets.py  production_pipeline.sh  test_hf_inference.py  test_output_format.py  validate_dataset.py
webui/: README.md  app.py  requirements.txt
webui/static/: chat.html
webui/templates/: index.html
