[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "askbuddyx"
version = "0.1.0"
description = "AskBuddyX - A practical coding assistant based on Qwen2.5-Coder with runnable-first responses"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Kashif Salahuddin", email = "salakash@example.com"}
]
dependencies = [
    "mlx-lm>=0.12.0",
    "datasets>=2.14.0",
    "pyyaml>=6.0",
    "huggingface_hub>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["askbuddyx*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]